--- a/html.html
+++ b/html.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>RepositoryTest</title>
+	</head>
+	<body>
+		<script type="text/javascript">
+			var 
+		</script>
+		<script type="text/javascript">
+			var fruitType=[3];
+			fruitType0="Banana ";
+			fruitType1="Apple ";
+			fruitType2="Kiwi ";
+			fruitType3="Orange ";
+			document.write(foodType0, foodType1, foodType2, foodType3);
+		</script>
+	</body>
+</html>
 
